--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -2,7 +2,7 @@
 <script src="{{ 'cart-slide.js' | asset_url }}" defer="defer"></script>
 
 
-<div class="pt-[calc(10vw+40px)]"> <!-- Adjusted padding-top for fixed header -->
+<div> <!-- Adjusted padding-top for fixed header -->
   <header id="header"
   class="fixed top-0 left-0 right-0 flex justify-center z-50 transition-transform duration-500 ease-out header-hidden">
   
