third round of changes, site is getting much better

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -292,10 +292,12 @@
     extend: {
       fontFamily: {
         'standard': ['Standard', 'sans-serif'],
-        'american-typewriter': ['American Typewriter', 'Courier', 'monospace'],
+        'americantypewriter': ['American Typewriter', 'Courier', 'monospace'],
+        'auxmono': ['Aux Mono', 'monospace']
       },
       colors: {
         'standard-blue': '#2A55EB',
+        'darker-blue': '#20248B',
       },
     },
     screens: {
