--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -167,7 +167,7 @@
         <div class="w-full lg:w-1/2 px-8 py-4 lg:overflow-y-auto">
           <div class="h-full flex flex-col justify-center">
             <h1 class="xlg:text-6xl lg:text-5xl md:text-4xl sm:text-3xl text-xl leading-[5rem] text-blue-800 font-standard font-bold mb-4 gsap-animate">{{ section.settings.main_heading }}</h1>
-            <p class="font-auxmono md:text-lg sm:text-sm text-lg text-standard-blue mb-4 gsap-animate">{{ section.settings.sub_heading }}</p>
+            <!-- <p class="font-auxmono md:text-lg sm:text-sm text-lg text-standard-blue mb-4 gsap-animate">{{ section.settings.sub_heading }}</p>  -->
             <p class="font-standard text-darker-blue mb-4 gsap-animate">{{ section.settings.intro_text }}</p>
             <div class="font-standard text-standard-blue mb-10 mt-10 gsap-animate">{{ section.settings.feature_list }}</div>
             <div class="flex justify-center gsap-animate"> <!-- Added flex container -->
