--- a/sections/loader-full.liquid
+++ b/sections/loader-full.liquid
@@ -2,13 +2,13 @@
 
 <div class="loader" style="display: none;">
   <div class="loader__content">
-    <div class="loader__left">
+    <div class="loader__left lg:w-1/3 w-0">
       <img src="{{ section.settings.loader_image | img_url: 'master' }}" alt="Loader Image" class="loader__image">
     </div>
     <div class="loader__right">
-      <div class="font-auxmono md:text-lg sm:text-sm text-lg text-standard-blue mb-4 loader__quote">{{ section.settings.loader_quote }}</div>
+      <div class="font-auxmono md:text-lg text-sm leading-relaxed md:leading-normal text-standard-blue mb-4 loader__quote">{{ section.settings.loader_quote }}</div>
       <div class="loader__progress-container">
-        <div class="loader__progress color-standard-blue"></div>
+        <div class="loader__progress"></div>
       </div>
       <div class="loader__number font-auxmono text-standard-blue">0</div>
     </div>
